fix gap in business plan card header

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,10 @@ img {
     border-bottom: 1px solid lightgray;
     padding: 10px 0;
     /* margin: 0 10px; */
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: baseline;
 }
 
 .business-plan-card__title{
